Horizontal scrolling issue solved

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Inter, sans-serif;
   background-color: #1c1a19;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .nav-bar,
